...
        if reversedTextLabel.text?.count == 0 {
            if let textToReverse = userInputTextView.text {
                let separateWords = textToReverse.components(separatedBy: " ")
                reversedTextLabel.text = String(separateWords.map {$0.reversed()}.joined(separator: " "))
                viewBecomesBlue()
                
                changeButtonText.setTitle("Clear", for: .normal)
                print(changeButtonText.tag)
            }
            
        } else if reversedTextLabel.text?.count != 0  {
            reversedTextLabel.text = ""
            userInputTextView.text = ""
...
